--- a/gb/ncid283_7.md
+++ b/gb/ncid283_7.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11750216.md#1" target="_blank">中国褐皮书：陆企现金流恶化 影子贷款再增</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11750216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/11/811160247131665-150x120.jpg" align ="left"></a>中国褐皮书（China Beige Book）第四季度的报告显示，大陆企业的现金流恶化，新订单减少，制造业供过于求，影子银行贷款再次增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11750144.md#1" target="_blank">墨西哥对中国铝箔和压力锅征收关税</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11750144.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_17V2TL-150x120.jpg" align ="left"></a>墨西哥经济部周五（12月27日）在官方公报上表示，在反倾销调查之后，该国决定对自中国进口的铝箔征收反补贴税。此前一天，该部表示，已经决定对自中国进口的铝制压力锅征税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749711.md#1" target="_blank">【新闻看点】美中经济两重天 川普：与习签协议</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1b4b324423b9f47e62cff9d9046e359a-150x120.jpg" align ="left"></a>中共商务部昨天表示，美中第一阶段贸易协议正在“履行法律审核、翻译校对等必要程序”。川普在24日也表示，正在翻译第一阶段的协议，他与习近平将签署最终的贸易协议。美中双方的说法，是贸易谈判的又一个积极动向。这是不是意味着枪声已经稀疏的贸易战要到终点了？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank">恐金融风险 中共2年任命12金融副省长??</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-150x120.jpg" align ="left"></a>大陆金融高管被密集调任省级副职，31个省级行政区共有15名“金融副省长”。而大陆地方政府债务激增，银行风险处置艰难，中共密集调任金融高管担任副省长被指恐惧金融风险集中爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank">油价来到三个月来最高点 有三个原因</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1407220846472483-150x120.jpg" align ="left"></a>周四（12月26日）油价上涨约1％，达到三个多月以来的最高。专家表示，油价上涨或是三方面原因促成：中美贸易战据估即将结束；美国原油库存减少以及石油产出减少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748802.md#1" target="_blank">郭台铭：美中科技战刚开始 台湾应把握机遇</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-111808941-150x120.jpg" align ="left"></a>台湾鸿海集团创办人郭台铭日前在接受访问时表示，中美科技战才刚开始，台湾会变成科技整合的关键，应把握机遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748251.md#1" target="_blank">贪污7.5亿 恒丰银行原董事长被判死缓</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748251.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/image_m1-150x120.jpg" align ="left"></a>恒丰银行原董事长姜喜运12月26日被山东省烟台市中级法院以贪污罪判处死刑，缓期二年执行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11747888.md#1" target="_blank">受贸易战影响 大陆上市公司近半净利缩水</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11747888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1408220138272663-150x120.jpg" align ="left"></a>美中贸易战令大陆企业遭受重创，最新的数据显示，今年第三季度，大陆近半上市公司净利缩水，业界预估明年的企业盈利也好不到哪去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747758.md#1" target="_blank">陆银行花式吸金：磨刀、送猪肉、拦路、高息</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512271416372382-150x120.jpg" align ="left"></a>年内大陆银行业为了增加储户存款，各种“吸金”方式齐上，除了出售高利率存款产品之外，还推出存款送猪肉、存款免费磨刀、路口拦车招揽客户等营销方式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank">置业者购房能力数据  一窥大陆民众收入概况</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/1002121143571813-150x120.jpg" align ="left"></a>近日一份调查显示，大陆购房置业的受访者中，超过一半只能接受最低价位选项（100万以下），近日有中国学者和社科院报告都提到中国民众收入问题表现在贫富差距大，家庭负债多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank">分析：美中贸易战 明年进入三个关键期</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180493925-1-600x400-1-150x120.jpg" align ="left"></a>2020年是观察美中贸易关系更重要的一年，专家说，兑现承诺比谈判更为困难，明年进入三个关键期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank">【新闻看点】内幕：华为产品价格为何低廉？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/f8e70f9b0207db46a17f73028300f77d-150x120.jpg" align ="left"></a>今天（12月26日）华尔街日报连发两篇文章，深度起底华为产品价格低的内幕，拆穿了华为的谎言。是中共的几百亿美元寄养，支持着“巨婴”成长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747545.md#1" target="_blank">300万人以下城市取消落户限制 刺激经济？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747545.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/1204250943522343-150x120.jpg" align ="left"></a>中国经济全面降速，冲击就业之际，中共当局提出松绑劳动力流动限制的计划，其中包括全面取消常住人口300万以下城市落户限制，并放宽常住人口300万至500万人的大城市落户条件。分析认为，中共急于对户籍制度进行松绑，是迫于无奈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747380.md#1" target="_blank">大陆上市公司业绩差 年末24家“卖房筹资”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1305311027192519-150x120.jpg" align ="left"></a>大陆上市公司卖房潮持续，仅第四季度就有至少24家公司出售房产筹资，多数公司处于亏损状态。两家汽车企业（海马汽车和曙光股份）分别是卖房数量和金额最高，央企国企的整体卖房规模较大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746683.md#1" target="_blank">微信公众号后台出现故障 持续约30分钟</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>12月26日晚间5时20分左右，大陆微信公众号平台出现故障。不仅多个公众号内容无法正常浏览，而且网民亦无法登陆微信公众号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746509.md#1" target="_blank">圣诞节购物旺季 港人聚焦“黄色经济圈”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746509.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/A7A01488-150x120.jpg" align ="left"></a>每年圣诞节都是民众购物消费的最佳时机。在反送中运动笼罩下的香港圣诞节，人们除了继续抗争外，外出消费购物时也会选择“黄店”还是“蓝店”。此外，由于支持抗争者的“星火同盟”基金遭港警冻结、成员被拘捕，有关“黄色经济圈”的话题更成为这次圣诞节的谈论焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:45 PM							</td></tr>
@@ -16,18 +29,5 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743710.md#1" target="_blank">涉债务纠纷 北大方正逾11亿股被司法冻结</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/CFP435135368@1200x1200-150x120.jpg" align ="left"></a>北京大学控股国企北大方正集团持有的11亿股方正证券股份12月24日被司法冻结，冻结原因是涉及债务纠纷。北大方正深陷债务困境，其30亿美元债险些发生交叉违约，23日申请7只境外债券停牌，其中一只存在违约风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743546.md#1" target="_blank">中共“民企新28条”被指难解“挤压效应”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/75a70fcd7a4839039ab90af27688b9cf-150x120.jpg" align ="left"></a>中共官方最新发布的“民企新28条”被指在公有制经济下无法实现，当前大陆民营企业困境重重，受到国企的挤压，所面临的困难很难在短期内得到解决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank">纳瓦罗：贸易协议意味着2020美经济繁荣</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_14J2M9-150x120.jpg" align ="left"></a>白宫贸易顾问彼得·纳瓦罗（Peter Navarro）周二（12月24日）表示，中美第一阶段贸易协议、美国-墨西哥-加拿大协议（USMCA）以及即将与日本、韩国达成协议的成功，加上《2020财年国防授权法案》，一起将预示着2020年美国经济的“繁荣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743325.md#1" target="_blank">外资加速离华 美企41%要撤 1/3不想投资</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743325.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190514-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>众多外资企业正在加快撤出中国市场，一项调查显示，超过40%在华美资企业正计划移出中国，超过30%推迟或取消在华投资。欧洲和日韩台等国移出中国的企业也正在增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743361.md#1" target="_blank">18年销量冠军 近6年亏损 夏利轿车退出A股</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a-2-150x120.jpg" align ="left"></a>夏利曾连续18年占据销量冠军宝座，称得上是“国民轿车”的鼻祖。近6年来连续亏损80亿（人民币，下同），上市20年的夏利最终以“卖壳”的形式黯然离场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743339.md#1" target="_blank">川普：将和习近平签署美中贸易协议</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743339.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1NA6TV-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月24日）表示，他将与中国国家主席习近平举行签字仪式，签署本月达成的美中第一阶段贸易协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743269.md#1" target="_blank">贸易战助长台商回流潮 台湾租赁市场火爆</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-111808941-150x120.jpg" align ="left"></a>近年来外国企业加码投资台湾以及美中贸易战助长台商回流潮，让原本供不应求的台湾房屋租赁市场更加看俏，租金持续攀升。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:50 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/6/n11704557.md#1" target="_blank">【2019盘点】美中贸易战 四大回合战况激烈</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/6/n11704557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1145130342-150x120.jpg" align ="left"></a>美中贸易战持续已经1年半，双方已对数千亿美元商品互征关税。自去年12月川习会以来，贸易战又爆发两次升级；目前美中谈判虽然在进行中，但双方尚未达成协议，未来贸易战是继续升级还是获得缓解，也未可知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742615.md#1" target="_blank">王思聪还钱和解 多条限制消费禁令被解除</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/123-150x120.jpg" align ="left"></a>万达集团董事长王健林儿子王思聪，早前因合同纠纷案，被中共多个法院执行限制消费令。目前，案件双方已达成和解，法院正在解除对王思聪的限制消费令。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742493.md#1" target="_blank">网文：大陆汽车行业艰难的两大看点</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg" align ="left"></a>大陆汽车行业今年深陷泥潭，销量下滑，车企亏损不断加大，那么车企到底艰难在什么地方呢？“康斯坦丁”对此作了解释。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742305.md#1" target="_blank">网文：央行钱印出来了 借钱的人没了</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/04/90418184623459-150x120.jpg" align ="left"></a>中国货币始终保持高速增长，2019年9月广义货币已经达到195.23万亿人民币。但是大陆的经济状况不佳，借债的是三大主体债务繁重，结果钱印出来了，借钱买的人却没了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741515.md#1" target="_blank">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741515.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/online-shopping-1082728_640-150x120.jpg" align ="left"></a>最近，英国海关当局查获了价值近300万英镑（约390万美元）的假冒商品，这些假冒品是从中国运往英国，包括巴宝莉、香奈儿等假冒的奢侈品牌商品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741580.md#1" target="_blank">大陆明年GDP增幅或降至5.5% 就业恐恶化</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-929521586-150x120.jpg" align ="left"></a>中共国家信息中心首席经济师祝宝良日前在谈到明年大陆经济状况时表示，受贸易战影响，大陆明年GDP增幅将降至5.5%，同时失业率恐将大幅上升。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank">【新闻看点】2019难捱 马云：日接5友借钱电话</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1409180658462039-150x120.jpg" align ="left"></a>马云日前说，最近，一天接到5个借钱电话，一周10个朋友卖楼；透露中国企业的艰难处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741372.md#1" target="_blank">大陆社交电商刷单泛滥 兴起种草笔记产业链</a><br></h3>大陆社交电商平台被曝充斥着假流量、假宣传、假评论等现象，很多“种草笔记”的背后是一条造假产业链。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/ncid283_7.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/ncid283_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_7.htm">http://www.epochtimes.com/gb/ncid283_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
