--- a/gb/news392_6.md
+++ b/gb/news392_6.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769383.md#1" target="_blank">川人：精准除恶，川普的果敢行动让人敬佩</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769383.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-600x400-1-150x120.jpg" align ="left"></a>1月3日凌晨，伊朗精锐部队圣城旅司令卡西姆·苏莱曼尼（Qassim Soleimani，亦译索莱马尼）在伊拉克巴格达国际机场被美军导弹精确打击致死。川普总统对记者说，他下令击毙苏莱曼尼，目的是终止战争，而不是发起战争。这已经是川普总统近2个多月来，第3次出手精准除恶了。2019年10月26日，美军直升机出现在叙利亚西北.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:13 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768861.md#1" target="_blank">高天韵：日剧《北国情》跨越21年的经典</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Tokachi_plain_01-150x120.jpg" align ="left"></a>1981年，富士电视台制作的连续剧《来自北国》（《北の国から》）引起轰动，摘取诸多奖项。有人甚至说：《北》剧之后无日剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769323.md#1" target="_blank">陈思敏：中共时隔10年放行主粮转基因的背后</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769323.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/07/307023544875-150x120.jpg" align ="left"></a>目前，中共农业农村部一则有关转基因生物安全证书的公示信息显示......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768600.md#1" target="_blank">黄天辰：恐怖组织头目被美击毙 惊吓了谁</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768600.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-150x120.jpg" align ="left"></a>近日，美国连续几个大动作，让世界瞠目。应该说，有人被吓着了。
+
+先是川普总统感恩节前一天签署了《香港人权与民主法案》，之后，美国国防部罕见公开驻韩美军与韩军针对朝鲜高层的“斩首行动”训练的画面，转过年来第三天，美军空袭就把伊朗二号人物、恐怖分子组织首脑给斩首了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768923.md#1" target="_blank">海风：林郑月娥将走到尽头</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1906090248211366-600x400-150x120.jpg" align ="left"></a>中联办主任王志民被下课了。这意味着港府管理班子将很快就要面临一场大换血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank">【名家专栏】仇恨会害死自己</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1188049966-webcrop-1200x720-150x120.jpg" align ="left"></a>最近在新泽西州泽西城（Jersey City）的一家犹太洁食超市所发生的枪击事件，是我们美国人正在因为憎恨邻居而杀死自己的最新例子之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:15 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank">廖祖笙：2020年或为暴政收官年</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1506272237202039-560x400-150x120.jpg" align ="left"></a>习近平先生，你说“2020年是全面建成小康社会和‘十三五’规划圆满收官之年”，这不但让人无法苟同，而且有越来越多的迹象在表明，2020年或为暴政收官年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank">隋志：善恶有报是天理 只论来早与来迟</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/95d4b9ee87d4abf9229f27be738525d0-600x400-150x120.jpg" align ="left"></a>据明慧网信息统计，二零一九年中共至少冤判789名法轮功学员，非法庭审851场，非法抓捕435人，构陷到检察院、法院1137人，警察对309名被非法判刑的法轮功学员敲诈勒索现金4037830元。在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，制造出许许多多的妻离子散、家破人亡的冤案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768074.md#1" target="_blank">周晓辉：更换中联办主任 中南海仍避重就轻</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/180423090812100484-600x400-1-150x120.jpg" align ="left"></a>迄今为止，北京对此都不愿回应港人的要求，任命骆惠宁任新中联办主任也是避重就轻，而这样的任命大概除了让最高层更多了解香港真实信息外，也让港人依旧会持续抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:40 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768110.md#1" target="_blank">洪达：拒绝中共 维护普世价值</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768110.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/811271554201864-600x400-150x120.jpg" align ="left"></a>据今日挪威（Norway Today）网站报导，逾40名选手与15名教练、经理组成的中国滑雪代表队前往挪威梅罗克（Mer?ker）进行滑雪训练。中国滑雪队要求当地一座图书馆下架法轮功书籍，遭到馆方以侵犯言论自由为由强烈拒绝。该图书馆经理马肯（Anne Marken）告诉挪威报纸《Adresseavisen》说：“我们在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768047.md#1" target="_blank">王友群：美国“斩首”索莱马尼 一石四鸟</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768047.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-600x400-1-150x120.jpg" align ="left"></a>1月3日，根据美国总统川普的命令，美军无人机发射“地狱火”导弹，在伊拉克巴格达国际机场，击毙伊朗二号人物索莱马尼，伊拉克民兵武装“人民动员组织”副司令易卜拉希米，黎巴嫩真主党高级成员Mohammad Al-Kothrani等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:42 AM			</td></tr>
@@ -8,15 +18,36 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-600x400-1-150x120.jpeg" align ="left"></a>2020年1月1日18时许，江苏省仪征市刘集镇刘集村村民彭在林为报复当地政府强拆而行凶砍人，导致一死二伤。网络舆论把这一事件形容为今年的“开年第一杀”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/01/1101060640572357-150x120.jpg" align ="left"></a>中国人在西方自由民主的国家，竟然提出剥夺人们言论自由的要求，这是何等的荒谬和不可思议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 8:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（2）</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Korean_War_Montage_2-600x350-600x350-1-150x120.png" align ="left"></a>章国隆说，更多共军生病发烧，死于途中。每次一个连队近百人从丹东出发，一个来回步行一个月左右，一般都有四分之一的减员，就是死于非命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:39 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank">王友群：如何看中美将签署第一阶段贸易协议</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494181-1-600x400-150x120.jpg" align ="left"></a>美国总统川普表示，1月15日，美中将在白宫举行第一阶段贸易协议签署仪式，他会亲自参加。稍后他将赴北京讨论第二阶段协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank">颜丹：是谁造出了“善小而不为”的中国人？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/A006005-600x400-150x120.jpg" align ="left"></a>要想走出黑暗，就得战胜魔鬼，至少不能再去充当魔鬼的信徒。而选择与中共切割，就是走向光明的开始。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank">程晓容：党媒热捧李子柒 网红遇统战</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-936798738-150x120.jpg" align ="left"></a>一曲田园牧歌和“社会主义”、“党的领导”、“四个自信”被捆绑在了一起。显然，中共在利用李子柒的人气来推销它的洗脑宣传，也就是，搞统战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank">陈思敏：危害甚于武汉肺炎不明病毒的是什么</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/554c7c19817bf7c0d7ec272bb4dcd0af-150x120.jpg" align ="left"></a>中国湖北武汉出现“不明原因肺炎”在去年12月31日经官方证实至今，时过3天病源检测迟迟未有结果出炉，却已有8人因“传谣”被快速“精准”查处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank">【名家专栏】川普减企业税为何令左派烦恼</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1107020341211758-150x120.jpg" align ="left"></a>让左派沮丧的是，过去两年，海外美国企业已回流超过一万亿美元的资金，而且还将有更多海外资金回流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank">【名家专栏】改善地球环境 无需社会主义政策</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1178402661-webcrop-1200x720-150x120.jpg" align ="left"></a>24岁的博扬·斯莱特（Boyan Slat）是“海洋清理”（Ocean Cleanup）公司的创始人兼首席执行官，该公司利用创新技术清除全球海洋及河流中的塑料垃圾。他是在自己的18岁的“高龄”时，在祖国荷兰创立了这一倡议组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:34 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764938.md#1" target="_blank">新州：从违反程序看中共破坏司法公正</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506232146352039-150x120.jpg" align ="left"></a>“走法律程序”，这是中共执法者对当事人及家属经常说的一句话，这个法律程序就是执法机关和办案人必须遵守的法定办案顺序、步骤，目的是维护当事人的合法权益，监护执法者的职守节操，维护人类司法公正，确保所办案件能经得起历史检验，但大陆没有司法独立，执法者嘴上喊“走法律程序”，却案案都在违反法律程序，程序接连违法，何谈司法公正？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764613.md#1" target="_blank">袁斌：“小康年”将到，访民为何吊死在信访局</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1-8-600x367-150x120.jpg" align ="left"></a>2019年12月31日早晨5:45分，山西省柳林县退役老兵余海平被发现吊死在山西省信访局大门上，令人唏嘘！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank">俞晓薇：明慧新年祝福值得中国和世界深思</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-28-1912210523254535-150x120.jpg" align ="left"></a>岁末，祝福与感恩热潮再现于明慧网——中国大陆及海外的法轮功学员恭祝法轮功创始人李洪志大师新年快乐。众多学员的亲属等各界人士也发出贺信，感谢李洪志大师、感谢法轮功。在道德下滑、纷争动荡的今日，法轮大法正在从根本上净化人心、净化世界，意义深远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:13 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11770081.md#1" target="_blank">杜彼得：登高皋以舒啸 临清流而赋诗</a><br></h3>华人不熟悉民主选举吗？
+
+有国内来的友人告诉我们说，从中国移民来的人，可能会比较欠缺所谓“选举制度”的概念，但我们却不以为然。真正搞不太清础的是何谓“民意代表”和“民选官员”的概念，而不是选举制度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 1:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769912.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>中共滑雪队，备战冬奥会。
+挪威梅洛克，训练地扬威。
+一进图书馆，气指充指挥。
+大法书下架，彰显实力锐。
+道是被发现，党妈要问罪。
+忘了在外国，还当大陆内。
+自然遭拒绝，经理回声脆。
+完全不可能，下架书不会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769903.md#1" target="_blank">关乐：就王志民下台寄语有良港警</a><br></h3>中南海招改，王志民被踹。
+恶党顶门棍，一折即远甩。
+张晓明或明，林郑恐也快。
+瞪眼邓炳强，甭老逞强坏。
+坚强之后盾，陷阱之花盖。
+谁当席梦思，谁被党活埋。
+看看周永康，你能比他帅？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:17 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769356.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>恶党末日临 动辄挨掌嘴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768243.md#1" target="_blank">理悟：别当郎中当推手</a><br></h3>
+
+病不轻呀中共党，身患绝症入膏肓。
+保党郎中忙急救，四个自信当良方。(注)
+说是自信难自信，贫血气短心发慌。
+不治之症空费神，猛药一攻见阎王。
+中共横竖都是死，万邦挥拳打共狼。
+天灭中共天意定，滔天罪恶债必偿。
+没治喽，中共党，神医妙手难还阳。
+黄泉路上怨哪个？自打自倒果自尝。
+识时务者为俊杰，倒.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11768204.md#1" target="_blank">云鹤天：《七律?冬云》新解</a><br></h3>黑色天鹅漫天飞，
 犀牛成群皮毛灰。
 四面楚歌声声急，
@@ -63,28 +94,5 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764911.md#1" target="_blank">【名家专栏】浅析十年来美国主要经济论点</a><br></h3>本月初，华盛顿智库布鲁金斯学院（Brookings Institution）询问了10位学者，“过去十年，经济学界的重大理论是什么？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/4/n11766848.md#1" target="_blank">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br></h3>日前，在加拿大温哥华地区的列治文市中学因课堂讲香港游行真相，后即遭群殴踢下体事件，引起华人社区的广泛关注。事情发生在12月2日，可是很多本地人并不知晓或只知道一些从某个媒体看到的被轻描淡写了事件。所以没有引起更多的讨论和后期跟进关注。直到一些华裔移民到市政府、教育局上访，并递交了呼吁罢免校长的联署书后，此事即在加拿大的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11766398.md#1" target="_blank">杨宁：公安内部现惨案 官员自相残杀难休止</a><br></h3>生活在如此政治氛围下的中共各级官员，内心应该都充满了恐惧，因为不知道自己哪一天也会成为枪下之鬼。这也是越来越多的官员从体制内辞职，或者外逃、转移资金并将亲属安排在国外的原因，也是诸多中共高层在海外寻找退路的缘由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765043.md#1" target="_blank">85岁美籍台侨：阻碍两岸统一的是共产制度</a><br></h3>有人问我：“你愿意台湾与大陆统一，还是愿意台湾独立？”我对突如其来的问题没有作答。但稍加思考后，我问对方：“你愿意看到天安门大屠杀的悲剧也在台湾街头重演吗？”对方在问我：“那么你是赞成台湾独立吗？”我说：“如果你宣布台湾独立， 那不赞成台湾独立的人起来造反，你怎么办？”对方又说：“那你既不赞成台湾统一，也不赞成独立，那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 3:17 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764895.md#1" target="_blank">海网：龟蛇对鼠哭新愁</a><br></h3>长江见底现新洲，
-龟蛇对鼠哭新愁。
-不明肺炎从新冒，
-辟谣消声重新揪。
-瘟神似借新春运，
-恶党却蒙新盖头。
-非典悲剧如再演，
-恐有更多命白丢。
-天灭中共恩浩荡，
-魔拉陪葬雾浓稠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:12 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764415.md#1" target="_blank">林泉：香江之歌</a><br></h3>美丽香江城，雄伟狮子峰。
-九七落魔掌，从此无太平。
-中共施恶法，欲变红魔城。
-全民反送中，民众已觉醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:22 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11764382.md#1" target="_blank">关乐：赞香港元旦百万和平抗暴大游行</a><br></h3>二零二零元旦，
-上街再破百万。
-隆冬春潮驱寒，
-中南海冰裂颤。
-冰刀半途腰斩，
-只会推波助澜。
-挑事造事滥抓，
-港府泥潭深陷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_7.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_6.htm">http://www.epochtimes.com/gb/news392_6.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
