--- a/gb/nf3180_7.md
+++ b/gb/nf3180_7.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>法轮功海外弘传</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/12/n8803503.md#1" target="_blank">纽约法轮功学员布鲁克林大游行</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/12/n8803503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/MG_0767-150x120.jpg" align ="left"></a>2月12日，大纽约地区部分法轮功学员近千人来到布碌崙，沿着华人最多的八大道游行。天国乐团演奏者雄壮的乐曲，拉开了游行的序幕。
+
+仙女队、舞龙舞狮队、花船队和彩旗队等紧随其后，向布碌崙民众传递着法轮大法的美好，并送上元宵节祝福。他们无畏严寒，用真诚的笑容融化了漫天风雪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年02月13日 5:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/12/n8800761.md#1" target="_blank">纽约中国城庆祝元宵节 体验中国文化</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/12/n8800761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/1702111924331973-150x120.jpg" align ="left"></a>2月11日是黄历正月十五，为了庆祝元宵佳节，纽约法轮大法协会在华埠罗斯福公园举办活动，舞龙、舞狮、猜灯谜，还有腰鼓表演、乐器演奏、歌唱、功法表演等轮番登台，让社区民众和往来游客一起体验纽约元宵节的吉庆缤纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年02月12日 9:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/4/n8776701.md#1" target="_blank">纽约华人万人新年大游行 法轮功队伍最壮观</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/2/4/n8776701.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/B160029-150x120.jpg" align ="left"></a>2月4日，一年一度的由法拉盛华商会主办的“纽约华人新年大游行”在纽约法拉盛举行，约有一万华人参加了本次游行。纽约州副州长胡楚（Kathy Hochul）、主计长斯静格（Scott Sringer）以及市议员顾雅明等各级官员前来祝贺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年02月05日 4:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/11/29/n8541141.md#1" target="_blank">西雅图梅西游行合办人：此华人乐团独一无二</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/11/29/n8541141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/11/161129141644976-150x120.jpg" align ="left"></a>万众瞩目的梅西节日游行在世界之都纽约刚刚落下帷幕，在美国西海岸的华盛顿州西雅图市又拉开了序幕。具有近百年历史的梅西节日游行是商业公司策划承办及赞助的巨型活动，被梅西百货公司视为每年送给大众的礼物，其宗旨是将温馨、欢乐、团聚的幸福及高质量的娱乐表演在这个举国欢庆的盛大节日带给所有的家庭，特别是年少的孩童。
@@ -52,9 +55,6 @@
 开展时，法轮功展位挂着大幅制有法轮功真相、大法洪传、功法介绍等内容的落地画布，桌上摆放着.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年06月20日 8:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/6/7/n7971605.md#1" target="_blank">资深电影人：加拿大欢迎法轮大法</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/6/7/n7971605.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/2016-6-5-minghui-falun-gong-vancouver-04-ss-e1465291641951-150x120.jpg" align ="left"></a>二零一六年六月四日，加拿大温哥华法轮大法学员参加了本拿比市脱帽节游行，沿途受到观众热烈的欢迎。资深电影业人士Glen Hierlihy先生表示，加拿大欢迎法轮大法给这个年轻的国家带来悠久的中华文化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年06月07日 5:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/5/16/n7898967.md#1" target="_blank">宝书《转法轮》照亮纯真善良的西方主流人群</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/5/16/n7898967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/1605160632492669-150x120.jpg" align ="left"></a>5月11日至15日间，近万名来自世界53个国家的部分法轮功学员相聚纽约，庆祝法轮大法洪传24周年和第17届世界法轮大法日。每晚5点至8点，都有几百名法轮功学员到中领馆前炼功，抗议并呼吁世人关注中共迫害，声援失去自由修炼环境的中国大陆学员，其中也有很多不同年龄的西方人。听他们毫无保留地分享，犹如翻看一部部五光十色的书；而他们坚定走入大法修炼，却都是藉由一本宝书.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年05月16日 1:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/5/13/n7890313.md#1" target="_blank">美佛州政要祝贺法轮大法日 鼓励市民学炼</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/5/13/n7890313.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/10-florida-mayors-150x120.jpg" align ="left"></a>2016年5月13日是第17届世界“法轮大法日” ，也是法轮大法洪传世界25周年。佛州各地政要纷纷致信祝贺这个普天同庆的日子。
-
-截至5月12日，美国佛罗里达州法轮大法协会一共收到了来自佛州各地郡长、市长、郡委员会全体成员、市委员会全体成员亲自颁发的10封褒奖令。他们感谢法轮大法修炼者对社区的无私奉献，纷纷把2016年5月13日定为其郡县或市的 “法轮大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年05月13日 10:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/11/14/n8491811.md#1" target="_blank">旧金山老兵节游行 法轮功队伍感动大礼官</a><br></h3>）2016年11月13日，美国旧金山举行第九十六届老兵节游行（Veterans' Day Parade），纪念那些为了维护自由而做出巨大贡献的人们。法轮功学员组成的美西天国乐团应邀参加了此次游行，受到主办方和观众极大欢迎。游行大礼官说，你们不仅仅是100%的棒！你们是1000%的棒！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年11月14日 3:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/10/11/n8386718.md#1" target="_blank">墨西哥法轮功学员在当地大学里教授功法</a><br></h3>十月三日，在每月举行的首次教育仪式上，墨西哥法轮功学员在普埃布拉市（City of Puebla）艾尔瓦﹒爱迪生大学向学生们传授法轮功的功法，受到学生们的欢迎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年10月11日 5:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/9/18/n8311522.md#1" target="_blank">西英格兰大学招新会 百余人加入法轮功社团</a><br></h3>2016年9月16日，英国西英格兰大学(University of the West of England) 举行一年一度的学生社团招新会（Fresher Fair)。这是英国规模最大的招新会，由该校修炼法轮功的学生在去年初成立的法轮功社团第二年前来参会。
