--- a/gb/nf4786.md
+++ b/gb/nf4786.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="626"><h3><p><strong>大纪元  神韵观众反馈</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1034.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1107.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/2.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1044.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/49.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/144.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1080.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/149.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/150.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/154.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/153.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/21.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/158.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/30.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1106.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1103.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/121.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/14.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1096.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/1104.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/165.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/18.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d2lslv0s5ikdpw.cloudfront.net/video/play/33.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="626"><h3><p><strong>大纪元  神韵观众反馈</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1034.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1107.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/2.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1044.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/49.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/144.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1080.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/149.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/150.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/154.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/153.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/21.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/158.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/30.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1106.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1103.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/121.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/14.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1096.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/1104.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/165.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/18.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d10ymb2bxm7uaz.cloudfront.net/video/play/33.html" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img  src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789618.md#1" target="_blank">神韵在欧洲熠熠生辉 意大利政界高官盛赞</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789618.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001122020512639-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/13</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789077.md#1" target="_blank">剧院女高音获得启发 向神韵表达敬佩祝贺</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789077.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001121736272639-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/13</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787969.md#1" target="_blank">公司董事：神韵层次高不可及 表述人神的关系</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787969.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/200111092930100731-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/12</p></td></tr>
@@ -12,8 +12,20 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/24/n8233584.md#1" target="_blank">神韵交响乐团新季巡演来临 专访演奏家陈缨</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/24/n8233584.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2016/08/SYSO2016_1032x484_v1-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2016/08/27</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/20/n4666981.md#1" target="_blank">中国歌王关贵敏洛城展绝世唱法 谈神韵非凡意义</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/20/n4666981.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2016/03/1603200312041886-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2016/03/20</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/10/11/n4547344.md#1" target="_blank">回响心中的歌 专访神韵交响乐团女高音耿皓蓝</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/10/11/n4547344.md#1" target="_blank"><img width="600" src="http://i.epochtimes.com/assets/uploads/2015/10/1510101715561657-600x400.jpg"></a><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2015/10/13</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799900.md#1" target="_blank">“神将来人间” 诊所老板夫妇观神韵坚定信念</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799856.md#1" target="_blank">“回归神路” 美国航机长夫妇观神韵受启迪</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799841.md#1" target="_blank">神韵精美独一无二 园艺公司老板备受激励</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799715.md#1" target="_blank">神韵带来希望 银行公关专家感悟邪恶必败</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799416.md#1" target="_blank">神传文化绽光彩 国防承包商与神韵共鸣</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798653.md#1" target="_blank">社团理事长观神韵 赞神传文化精彩了不起</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799267.md#1" target="_blank">倾倒于神韵艺术 家具公司高管要连看两场</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799324.md#1" target="_blank">公司老板获全新视角 推崇神韵复兴传统价值</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799373.md#1" target="_blank">信仰故事发人深省 神韵震撼副总裁夫妇</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799251.md#1" target="_blank">前美国联邦官员热爱 赞颂神韵影响全世界</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799184.md#1" target="_blank">喜爱信仰内涵 美政府科技专家感恩神韵</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798878.md#1" target="_blank">期盼三年 雷神公司高级工程师圆神韵梦</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11799003.md#1" target="_blank">会社社长：看神韵 是生命长久的等候</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798627.md#1" target="_blank">神韵东京府中落幕 主流赞神韵为世界带来和平</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798627.md#1" target="_blank">神韵东京府中落幕 获主流赞为世界带来和平</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798584.md#1" target="_blank">神韵展现悠久文化 舞蹈家赞高境界艺术</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798462.md#1" target="_blank">神韵太神奇 日本知名公司本部长盛赞</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/17</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798466.md#1" target="_blank">伦理会支部长赞佩“神韵影响力后世永存”</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/16</p></td></tr>
@@ -50,17 +62,5 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794604.md#1" target="_blank">公司老板夫妇：神韵使你热爱自由</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794885.md#1" target="_blank">神韵展现正统中华文化 华人分析师赞了不起</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794920.md#1" target="_blank">“想再看一遍”运营经理全家观神韵大开眼界</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794972.md#1" target="_blank">神韵散发巨大能量 前政府官员精神舒畅</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794897.md#1" target="_blank">教授赞神韵：绝对完美</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794869.md#1" target="_blank">医生喜爱神韵舞蹈 赞男演员刚劲有力</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794842.md#1" target="_blank">神韵启迪人心 销售总监喜获精神财富</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794772.md#1" target="_blank">演出充满智慧 公司老板与神韵精神内涵共鸣</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794707.md#1" target="_blank">神韵恢复传统文化 制造业老板钦佩不已</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794718.md#1" target="_blank">演出绝美出色 公司总监希望能天天看神韵</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794280.md#1" target="_blank">公司总裁观神韵 感受幸福恩典</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794536.md#1" target="_blank">神韵超凡脱俗 公司总裁与神性内涵共鸣</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794342.md#1" target="_blank">神韵重现中华传统文化 医生夫妇深受感动</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794393.md#1" target="_blank">被神韵使命感动 教授夫妇赞演员善良</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794226.md#1" target="_blank">演员舞姿轻盈 公司老板：神韵就是神之舞</a><br></h3><p><img src="http://www.epochtimes.com/assets/themes/djy/images/time.gif">2020/01/15</p></td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf4786.htm">http://www.epochtimes.com/gb/nf4786.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
